package com.example.note.presentation.utils

object TestTags {
    const val ORDER_SECTION = "ORDER_SECTION"
    const val NOTES_LAZY = "NOTES_LAZY"
    const val TITlE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val BODY_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val ASCENDING_BUTTON = "ASCENDING_BUTTON"
    const val DESCENDING_BUTTON = "DESCENDING_BUTTON"
    const val NOTE = "NOTE"
    //Field
}
